overflowing pokemon fix

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -582,7 +582,6 @@ $event-incubator-status-color: #e9e1b5;
 
 .inner-wrap .pokemon .image-container {
     height: 100px;
-    width: 100px;
     margin: 0 auto;
 }
 
